[project]
name = "slacktail"
version = "0.1.0"
description = "Tail slack channels to your CLI"
authors = [
    { name = "Edwin Hermans", email = "edwin@madtech.cx" }
]
dependencies = [
    "curlparser>=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"slacktail" = "slacktail:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slacktail"]
